--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ rvm:
 before_install:
   - git submodule update --init
   - sudo apt-get update
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
   - gem install bundler -v '~> 1.6'
