--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,4 @@ rvm:
 before_install:
   - git submodule update --init
   - sudo apt-get update
-  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
-  - gem install bundler -v '~> 1.6'
+  - gem install bundler -v '~> 1.6' --default
