--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ before_install:
   - git submodule update --init
   - sudo apt-get update
   - gem install bundler -v '~> 1.6' --default
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem list
