--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ rvm:
 before_install:
   - git submodule update --init
   - sudo apt-get update
+  - gem install --default -v '~> 1.6'
   - gem list
